{
    "name": "playerControls",
    "maps": [
        {
            "name": "playerInput",
            "id": "04f1b36e-e516-4fab-bd6c-a9fea4692b93",
            "actions": [
                {
                    "name": "playerMovement",
                    "type": "PassThrough",
                    "id": "d6311de5-9d0a-4dcb-90ec-9befcd059f54",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "playerJump",
                    "type": "Button",
                    "id": "a04cf000-a729-45e2-bf69-aedc6ab43311",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "playerFire",
                    "type": "Button",
                    "id": "2c9a512e-4c16-4ecf-be62-b508d94d4068",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "playerMouseX",
                    "type": "PassThrough",
                    "id": "76aaaac2-40dd-44dc-a10d-b7302a729dbb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "playerMouseY",
                    "type": "PassThrough",
                    "id": "27e7c594-2ca8-443a-b5a2-8018ffb048e1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "playerInteract",
                    "type": "Button",
                    "id": "fca5abd5-d478-48c5-ae3b-6def299259d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "playerInventory",
                    "type": "Button",
                    "id": "268ba2d3-762d-4ba4-8475-9c38b9c11da6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "playerDash",
                    "type": "Button",
                    "id": "0ee68391-0e55-4c39-92a0-2c43b9ff38cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "changeActiveItem",
                    "type": "PassThrough",
                    "id": "cc7346ea-343e-4e8c-816c-b790cb540355",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "playerChangeItemMode",
                    "type": "Button",
                    "id": "9bea4666-403e-419c-b8f9-17afe6658311",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "playerActiveBuff",
                    "type": "Button",
                    "id": "c68c9021-928f-4973-a787-4260ca5291ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d5521592-2850-4dea-922f-5084eab90f30",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "playerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f9335648-63be-4650-b0b2-3aac973a9458",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "725d9db0-09ed-47fd-9bb6-573e9dd82e74",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "22a55e2b-301e-46f4-bf3c-d86166f40321",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e392bac7-8a67-4b23-90ac-951c388c6bbc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ffd4d81e-5094-4ce6-b13c-da83fce66a16",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebaac7fa-63c3-4c82-a6ba-7667bc24417d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c63fdd13-9b0d-4746-985d-30357d053047",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerMouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "230ce2d9-2ccb-456d-a56b-67ca13830e2e",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerMouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4948b960-f1e5-4201-9638-f055a75e43a1",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a792d22-7e2b-4b3e-9936-b20522e3546c",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7d40db0-7a7c-40c1-ba86-470144991615",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "882557e9-00d8-4fa2-a7ea-4fb2ac7a16f0",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "changeActiveItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdbefb90-d1c8-4336-81e5-75e9f74c5d44",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerChangeItemMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19b1c9f2-4ed7-4b9e-a741-1746651b0b95",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB+M",
                    "action": "playerActiveBuff",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KB+M",
            "bindingGroup": "KB+M",
            "devices": []
        }
    ]
}